Look for a form ancestor even if we're not in a document and our parent is changed.  Bug 257947, r+sr=jst